--- a/app/public/css/l-m-utilities.css
+++ b/app/public/css/l-m-utilities.css
@@ -111,12 +111,6 @@
 .l\:m\:justify-items-stretch {
   justify-items: stretch !important;
 }
-.l\:m\:justify-self-auto {
-  justify-self: auto !important;
-}
-.l\:m\:justify-self-baseline {
-  justify-self: baseline !important;
-}
 .l\:m\:justify-self-center {
   justify-self: center !important;
 }
