--- a/app/public/css/l-t-utilities.css
+++ b/app/public/css/l-t-utilities.css
@@ -111,12 +111,6 @@
 .t\:justify-items-stretch {
   justify-items: stretch !important;
 }
-.t\:justify-self-auto {
-  justify-self: auto !important;
-}
-.t\:justify-self-baseline {
-  justify-self: baseline !important;
-}
 .t\:justify-self-center {
   justify-self: center !important;
 }
